2011-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/Makefile.in,
	* sdas/linksrc/lksdcdb.c: new, added,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/lkeval.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lkmain.c: synced further with ASxxxx 5
	* sdas/linksrc/sdld.c: moved tolower
	* src/SDCCmain.c(linkEdit),
	* src/z80/main.c(_gbz80_rgblink): changed .lnk to .lk
	* lkar.c(strndup): removed static

2011-04-18 Borut Razem <borut.razem AT gmail.com>

	* lkar.c: strndup() is a GNU extension,
	  so it is defined here for all platforms

2011-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* lkar.c: fixed bug 3288398

2011-04-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h: include sdld.h
	* sdas/linksrc/lkarea.c(lkparea, lnkarea, lnkarea2),
	* sdas/linksrc/lkmain.c(parse, setbas),
	* sdas/linksrc/lksym.c(newsym, symeq, hash): synced zflag with ASxxxx 5
	* support/regression/ports/z80/fwk.lib: new, added

2011-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/_memset.c,
	  device/lib/_strchr.c,
	  device/lib/_strrchr.c:
	  Make string function parameters standard-compliant for the z80 and gbz80 ports.

2011-04-13 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCval.c, src/SDCCutil.c,
	  src/SDCCutil.h: added support for universal characters in strings,
	  support for "\Uxxxxxxxx", warning if not C99

2011-04-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/crtcall.s,
	* device/lib/z80/crtcall.s: new, added for RFE 3284870
	* device/lib/gbz80/Makefile.in,
	* device/lib/z80/Makefile.in: added crtcall
	* src/z80/gen.c(emitCall): use __sdcc_call_hl
	* src/z80/peep.c(z80MightRead): prevent HL from being optimized out
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/z80/spec.mk: added fwklib for statics.rel
